add notifcaion job